# C_Hackathon

./: .gitignore  CMakeLists.txt  Makefile  README.md  UI.py  control.c  control.h  fault.c  fault.h  input.c  input.h  log.c  log.h  main.c  mode.c  mode.h  state.c  state.h  types.h
design/: design.md
include/: control.h  fault.h  input.h  log.h  mode.h  state.h  types.h
logs/: 2026-04-13_14-36-37.txt  2026-04-13_14-37-29.txt  2026-04-15_22-08-15.txt  2026-04-15_22-11-43.txt  2026-04-15_23-16-57.txt  2026-04-15_23-17-10.txt  2026-04-15_23-22-37.txt  2026-04-15_23-22-43.txt  2026-04-16_10-09-37.txt  2026-04-16_10-13-38.txt  logs.txt
src/: control.c  fault.c  input.c  log.c  main.c  mode.c  state.c
